# box3d-wasm

./: .clangd  .gitignore  .gitmodules  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  LICENSE  README.md  package.json  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: deploy-demo.yml
demo/: index.html  package.json  tsconfig.json  vite.config.ts
demo/public/: coi-serviceworker.js
demo/scripts/: bench-threads.mjs
demo/src/: main.ts  physics-worker-base.ts  physics-worker-protocol.ts  physics.worker.ts  ragdoll-render.ts  shader-instanced-boxes.ts  snapshot-views.ts  stats.d.ts  style.css  virtual-wasm-version.d.ts  vite-env.d.ts  worker-world-bridge.ts
demo/src/samples/: arch-scene.ts  arch.ts  arch.worker.ts  box-stack.ts  box3d-rng.ts  capsule-stack.ts  card-house-scene.ts  card-house-thick.ts  card-house.ts  card-house.worker.ts  compound-material-dedup.ts  compound-simple.ts  cylinder-sample.ts  cylinder-scene.ts  cylinder-stack-scene.ts  cylinder-stack.ts  cylinder-stack.worker.ts  cylinder.ts  cylinder.worker.ts  debug-overlay.ts  dominoes.ts  dominoes.worker.ts  double-domino-scene.ts  double-domino.ts  double-domino.worker.ts  f32.ts  generic-host.ts  generic-worker-sample.ts  generic.worker.ts  grid-mesh-visual.ts  index.ts  isotropic-friction-scene.ts  isotropic-friction.ts  isotropic-friction.worker.ts  jenga-stack.ts  object-asserts-bench.ts  pyramid2d-scene.ts  pyramid2d.ts  pyramid2d.worker.ts  restitution-scene.ts  (+17 more)
demo/src/samples/benchmark/: benchmark-tile-shared.ts  candy-cups-scene.ts  candy-cups.ts  candy-cups.worker.ts  destruction-scene.ts  destruction.ts  destruction.worker.ts  explosion-scene.ts  explosion.ts  explosion.worker.ts  falling-boxes-scene.ts  falling-boxes.ts  falling-boxes.worker.ts  falling-trees-scene.ts  falling-trees.ts  falling-trees.worker.ts  joint-grid-scene.ts  joint-grid.ts  joint-grid.worker.ts  junkyard-scene.ts  junkyard.ts  junkyard.worker.ts  large-pyramid-scene.ts  large-pyramid.ts  large-pyramid.worker.ts  large-world-scene.ts  large-world.ts  large-world.worker.ts  many-pyramids-scene.ts  many-pyramids.ts  many-pyramids.worker.ts  rain-scene.ts  rain.ts  rain.worker.ts  wide-pyramid-scene.ts  wide-pyramid.ts  wide-pyramid.worker.ts
demo/src/samples/bodies/: body-type-scene.ts  body-type.ts  body-type.worker.ts  disable-scene.ts  disable.ts  disable.worker.ts  fixed-rotation-scene.ts  fixed-rotation.ts  fixed-rotation.worker.ts  gyroscopic-torque-scene.ts  gyroscopic-torque.ts  gyroscopic-torque.worker.ts  kinematic-scene.ts  kinematic.ts  kinematic.worker.ts  lock-mixing-scene.ts  lock-mixing.ts  lock-mixing.worker.ts  spinning-book-scene.ts  spinning-book.ts  spinning-book.worker.ts  weeble-scene.ts  weeble.ts  weeble.worker.ts
demo/src/samples/box/: stack-scene.ts  stack.ts  stack.worker.ts
demo/src/samples/capsule/: stack-scene.ts  stack.ts  stack.worker.ts
demo/src/samples/card/: house-thick-scene.ts  house-thick.ts  house-thick.worker.ts
demo/src/samples/collision/: ray-curtain-scene.ts  ray-curtain.ts  ray-curtain.worker.ts
demo/src/samples/compound/: hulls-scene.ts  hulls.ts  hulls.worker.ts  material-dedup.ts  material-dedup.worker.ts  simple-scene.ts  simple.ts  simple.worker.ts  spheres-scene.ts  spheres.ts  spheres.worker.ts  tile-floor-scene.ts  tile-floor.ts  tile-floor.worker.ts
demo/src/samples/continuous/: bounce-house-scene.ts  bounce-house.ts  bounce-house.worker.ts  bullet-vs-stack-scene.ts  bullet-vs-stack.ts  bullet-vs-stack.worker.ts  is-fast-scene.ts  is-fast.ts  is-fast.worker.ts  spinning-stick-scene.ts  spinning-stick.ts  spinning-stick.worker.ts  stall-scene.ts  stall.ts  stall.worker.ts  thin-wall-scene.ts  thin-wall.ts  (+1 more)
docs/: OTHER_PROJECTS.md  README.md  SAMPLES.md  TYPESCRIPT_API.md  WASM_API_SURFACE.md  reference-dump-plan.md  washer-performance-plan.md
integration-test/: README.md
patches/box3d/: 0001-profile-levels.patch  BASE_SHA  README.md
scripts/: compare-dumps.ts  compare-sample.sh  prepare-clangd.sh  reference-dump-smoke.sh  wasm-dump.ts
tools/reference-dump/: CMakeLists.txt  README.md  dump-core.c  dump-core.h  dump-interaction-overrides.cpp  dump-interaction-overrides.h  reference-dump.cpp  sample-stubs.cpp  sample_card_house_thick.cpp  stubs.cpp
tools/reference-dump/stubs/: imgui.h  sokol_app.h
(+121 files in other folders)
